<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num1_label"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_num1"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num2_label"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_num2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sub"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mul"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_div"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/testResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textStyle="italic"/>

</LinearLayout>